# fontedit

./: CMakeLists.txt  README.md  font.c  font.h  fontedit.c  fontedit_config.h.in  gui.c  gui.h  list.h  render.c  render.h  theme.c  theme.h  util.c  util.h  video.c  video.h  widget.c  widget.h
src/: CMakeLists.txt  color.h  font.c  fontedit.c  gui.c  gui.h  list.h  render.h  theme.h  util.c  video.c  video.h
src/widget/: char_edit.c  char_table.c  inputbox.c  inputbox.h  label.c  label.h  menu.c  menu.h  menu_bar.c  menu_item.c  menu_item.h  messagebox.c  widget.c  window.c  window.h
test/: CMakeLists.txt  test_render.c  test_widget.c
widget/: char_edit.c  char_edit.h  char_table.c  char_table.h  grid.h  inputbox.c  inputbox.h  label.c  label.h  menu.c  menu.h  menu_bar.c  menu_bar.h  menu_item.c  menu_item.h  messagebox.c  messagebox.h  util.c  util.h  widget.c  widget.h  widgets.h  window.c  window.h
