#include_directories ("${PROJECT_SOURCE_DIR}/src")
#
#add_executable(test_render test_render.c)
#add_executable(test_widget test_widget.c)
#
#add_test(test_render test_render)
#add_test(test_widget test_widget)
#
#target_link_libraries(test_render video cmocka)
#target_link_libraries(test_widget widget cmocka)